--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -34,6 +35,7 @@
     padding: 70px 70px;
     background-color: #1f2937;
     justify-content: center;
+    flex: 1;
 }
 .hero-text h1 {
     color: #f9faf8;
@@ -55,7 +57,7 @@
     font-size: 18px;
 }
 .hero-img img {
-    width: 300px;
+    width: 350px;
     justify-content: center;
 }
 .container1 {
@@ -90,6 +92,8 @@
     font-size: 18px;
 }
 .quote {
+    display: flex;
+    flex-direction: column;
     padding: 100px 100px;
     background-color: #e5e7eb;
     /* display: flex; */
@@ -101,14 +105,14 @@
     color: #1f2937;
     font-size: 36px;
     font-style: italic;
-    width: 1200px;
-    text-align: justify;
-    text-align: center;
+    /* swidth: 1200px; */
+    /* text-align: justify; */
+    /* text-align: center; */
 
 }
 .quote h2 {
     text-align: right;
-    padding-right: 100px;
+    /* padding-right: 100px; */
 }
 .action {
     display: flex;
